--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "UNLICENSED",
   "dependencies": {
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
+    "fast-csv": "^2.4.1",
     "handlebars-dateformat": "^1.1.1",
     "isomorphic-fetch": "^2.2.1",
     "mongoose": "^5.2.14",
